# seo-embeddings

./: .env.example  .gitignore  AnnotationDataset.ipynb  Database.ipynb  Evaluate.ipynb  Finetune.ipynb  Playground.ipynb  Qdrant.ipynb  Tesmino - Keyword Rankings.session.sql  Visualize.ipynb  config.py  embedding.py  emsearch.service  generate_predictions.py  index.html  pyproject.toml  server.py  translations.py
queries/: href_queries.csv  keywords_by_website.sql  keywords_per_website.sql  website_by_keyword.sql  website_list.sql
src/emcache/: __init__.py  base.py  huggingface.py  ollama.py
src/emseo/: storage.py
src/emseo/backend/: agent.py
src/seo_embeddings.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
