[project]
name = "seo-embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.4.0",
    "clickhouse-connect>=0.9.2",
    "fastapi[standard]>=0.120.0",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
]
